Notice message updated

--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
             </h2>
         </div>
 
+
+        <div class="notice-message">
+            <img src="./Website Images/Icons/information-gradient-icon.svg" alt="information icon" style="width: 44px;">
+            <p class="p2" style="text-align: left; ">My portfolio is currently undergoing <span style="color: white; font-weight: 500;">maintenance. </span>Projects are being updated and added but in the meantime, check out some of my past work!</p>
+        </div>
+
             <!-- <a href="./arrow.html" class="link-wrapper">
                 <div class="project-card-1 " id="arrow">
                     <div class="pc1-main-content">
