Redo of notice message icon size and margin

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 
         <div class="notice-message">
-            <img src="./Website Images/Icons/information-gradient-icon.svg" alt="information icon" style="width: 44px;">
+            <img src="./Website Images/Icons/information-gradient-icon.svg" alt="information icon">
             <p class="p2" style="text-align: left; ">My portfolio is currently undergoing <span style="color: white; font-weight: 500;">maintenance. </span>Projects are being updated and added. In the meantime, check out some of my past work!</p>
         </div>
 
